--- a/overlay.html
+++ b/overlay.html
@@ -35,6 +35,12 @@ Ok, more work needs to be done.
     left: 0px;
     right: 0px;
   }
+  .hidden{
+    opacity: 0 !important;
+  }
+  .visible{
+    opacity: 1 !important;
+  }
   </style>
 </head>
 
