Refactored Naming in SlideBuilder.js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <h1>Some text</h1>
 
 <textarea id="textThing" rows="25" cols="50">
-  <h2>delivered content :)</h2>
+  <h2>some content with words and things</h2>
 </textarea>
 
   <input type="button" onclick="sendInput()" value="send"/>
