--- a/index.html
+++ b/index.html
@@ -2,14 +2,24 @@
 <body>
   <h1>Some text</h1>
 
-<textarea id="textThing" rows="25" cols="50">
-  <h2>some content with words and things</h2>
+<textarea id="text" rows="3" cols="25">
+  some content with words and things
+</textarea>
+<textarea id="inline_style" rows="10" cols="25">
+  font-family: ailerons; font-size: 50px; color: white;
+</textarea>
+<textarea id="style" rows="10" cols="25">
+  .slide_container{
+      background-image: url('./assets/picture.jpg');
+      background-size: cover;
+      outline: 10px solid #e1c065;
+      outline-offset: -10px;
+    }
 </textarea>
 
-  <input type="button" onclick="sendInput()" value="send"/>
-  <input type="button" onclick="nextSlide()" value="next"/><br />
+  <input type="button" onclick="nextSlide()" value="Show on Screen"/><br />
   <input type="text" id="time" />
   <input type="button" onclick="setTransitionTime()" value="send"/>
 </body>
-<script src="main/MainWindow.js" type="text/javascript"></script>
+<script src="./main/MainWindow.js" type="text/javascript"></script>
 </html>
