--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
   font-family: ailerons; font-size: 50px; color: white;
 </textarea>
 <textarea id="style" rows="10" cols="25">
-  .slide_container{
+
+</textarea>
+<textarea id="theme" rows="10" cols="25">
       background-image: url('./assets/picture.jpg');
       background-size: cover;
       outline: 10px solid #e1c065;
       outline-offset: -10px;
-    }
 </textarea>
 
   <input type="button" onclick="nextSlide()" value="Show on Screen"/><br />
+  <input type="button" onclick="setTheme()" value="Set theme"/><br />
   <input type="text" id="time" />
   <input type="button" onclick="setTransitionTime()" value="send"/>
 </body>
