Save Theme into JSON File
This will let you save Theme into Theme JSON Files so that they can be loaded at a later point in time

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
   <input type="button" onclick="setTheme()" value="Set theme"/><br />
   <input type="text" id="time" />
   <input type="button" onclick="setTransitionTime()" value="send"/>
+  <input type="text" id="themeName" placeholder="Theme Name" />
+  <input type="button" onclick="saveTheme()" value="Save Theme"/>
+  <input type="button" onclick="loadTheme()" value="Load Theme"/>
 </body>
 <script src="./main/MainWindow.js" type="text/javascript"></script>
 </html>
