--- a/overlay/pages/overlay.html
+++ b/overlay/pages/overlay.html
@@ -56,6 +56,6 @@ Ok, more work needs to be done.
   </div>
 </body>
 
-<script src="screen/handler.js" type="text/javascript"></script>
+<script src="../js/handler.js" type="text/javascript"></script>
 
 </html>
