Create Coder Page and Basic Class Structure for Foundation and Theme Builder

--- a/main/pages/editTheme.html
+++ b/main/pages/editTheme.html
@@ -1,9 +1,9 @@
 <html>
     <body>
+        <a href="coder.html">Coder</a>
         <a href="presenter.html">Present</a>
         <h1>Edit Theme</h1>
-        <textarea id="theme" rows="10" cols="25" placeholder="theme css">
-        </textarea>
+        <textarea id="theme" rows="10" cols="25" placeholder="theme css"></textarea>
         <input type="button" onclick="setTheme()" value="Set theme"/><br />
         <input type="text" id="themeName" placeholder="Theme Name" />
         <input type="button" onclick="saveTheme()" value="Save Theme"/>
