--- a/main/pages/coder.html
+++ b/main/pages/coder.html
@@ -2,8 +2,8 @@
     <body>
         <a href="editTheme.html">Edit Theme</a>
         <h1>Coder</h1>
-        <textarea id="foundation_html" rows="10" cols="25" placeholder="code"></textarea>
-        <textarea id="foundation_css" rows="10" cols="25" placeholder="code"></textarea>
+        <textarea id="foundation_html" rows="10" cols="25" placeholder="html"></textarea>
+        <textarea id="foundation_css" rows="10" cols="25" placeholder="css"></textarea>
         <input type="text" id="foundationName" placeholder="Foundation Name" />
         <input type="button" onclick="saveFoundation()" value="Save"/>
 
